--- a/styles.css
+++ b/styles.css
@@ -346,25 +346,94 @@ h3 {
 	background-color: #BC4913;
 	padding-bottom: 120px;
 }
-
 @media only screen and (min-width: 320px) and (max-width: 480px){
 	header {
-	  font-size: 12px;
-	  width: 230%;
+	  font-size: 0.75rem;
+	  flex-wrap: nowrap;
 	}
 	.logo img {
-		width: 120px;
+		width: 120%;
 	}
-	.nav_link li,a {
-		font-size: 15px;
+	ul.nav_link {
+		margin-bottom: 11%;
 	}
-	main {
-		width: 250%;
+	h1 {
+		font-size: 1.5rem;
+	}
+	h2 {
+		font-size: 1.75rem;
+	}
+	.publication h2::before {
+		display: none;
+	}
+	.publication h2::after {
+		display: none;
+	}
+	.actualite h2::before {
+		display: none;
+	}
+	.actualite h2::after {
+		display: none;
+	}
+	.books_title {
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+	.daily_news {
+		flex-wrap: wrap;
+	}
+	.place {
+		flex-wrap: wrap;
+	}
+}
+@media only screen and (min-width: 408px) and (max-width:768px) {
+	header {
+        font-size: 0.80rem;	
+		flex-wrap: nowrap;
+	}
+	ul.nav_link {
+		margin-bottom: 8%;
+	}
+	h1 {
+		font-size: 1.85rem;
+	}
+	h2 {
+		font-size: 2.75rem;
+	}
+	.function p {
+		font-size: 1.20rem;
+	}
+	.publication h2::before {
+		display: none;
+	}
+	.publication h2::after {
+		display: none;
+	}
+	.actualite h2::before {
+		display: none;
+	}
+	.actualite h2::after {
+		display: none;
+	}
+	.books_title {
+		flex-wrap: wrap;
+	}
+	.daily_news {
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+	.place {
+		flex-wrap: wrap;
+	}
+}
+@media only screen and (max-width: 1024px) {
+	.function p {
+		font-size: 1.30rem;
 	}
 	.publication h2::before {
 		content: "";
 		display: block;
-		width: 120px;
+		width: 160px;
 		height: 5px;
 		background: #060b11;
 		position: absolute;
@@ -374,21 +443,17 @@ h3 {
 	.publication h2::after {
 		content: "";
 		display: block;
-		width: 110px;
+		width: 160px;
 		height: 5px;
 		background: #060b11;
 		position: absolute;
 		right: 0;
 		top: 50%;
 	}
-	.books_title img {
-		height: 80px;
-		width: 100px;
-	}
 	.actualite h2::before {
 		content: "";
 		display: block;
-		width: 280px;
+		width: 350px;
 		height: 5px;
 		background: #060b11;
 		position: absolute;
@@ -398,7 +463,7 @@ h3 {
 	.actualite h2::after {
 		content: "";
 		display: block;
-		width: 270px;
+		width: 350px;
 		height: 5px;
 		background: #060b11;
 		position: absolute;
@@ -406,3 +471,50 @@ h3 {
 		top: 50%;
 	}
 }
+@media only screen and (max-width: 1600px) {
+	.publication h2::before {
+		content: "";
+		display: block;
+		width: 280px;
+		height: 5px;
+		background: #060b11;
+		position: absolute;
+		left: 0;
+		top: 50%;
+	}
+	.publication h2::after {
+		content: "";
+		display: block;
+		width: 280px;
+		height: 5px;
+		background: #060b11;
+		position: absolute;
+		right: 0;
+		top: 50%;
+	}
+	.actualite h2::before {
+		content: "";
+		display: block;
+		width: 550px;
+		height: 5px;
+		background: #060b11;
+		position: absolute;
+		left: 0;
+		top: 50%;
+	}
+	.actualite h2::after {
+		content: "";
+		display: block;
+		width: 550px;
+		height: 5px;
+		background: #060b11;
+		position: absolute;
+		right: 0;
+		top: 50%;
+	}
+	.daily_news p {
+		font-size: 1.30rem;
+	}
+	
+}
+
