--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ h1 {
 
 .publication h2 {
 	text-align: center;
-	font-family: 'Beau Rivage', cursive;
+	font-family: 'Beau Rivage', 'cursive';
 	font-weight: bolder;
 	font-style: italic;
 	font-size: 2.5em;
